--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Silicon Valley IP Works&trade;: Concept overview and demonstration</a>
+        <a class="navbar-brand" href="#">Silicon Valley IP Works&trade;: Intellectual property development and licensing company</a>
 
 
 <!--
@@ -73,7 +73,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 mx-auto">
-            <h1 ><p><a href = '../launched/comingsoon_03/loom-www-demo-comingsoon.html'>7-day free demo</a><br>(no signup needed)</h1>
+            <h1 ><p>Software, Hardware and Silicon IP<br><br>Valley forged</h1>
           </div>
                       <!--
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -100,7 +100,7 @@
       <div class="container">
         <div class="row" style="margin-bottom : 50px;">
           <div class="col-md-4 mx-auto ">
-            <a href="" class="btn btn-block btn-lg btn-primary">Intuitive Workflow</a>
+            <a href="" class="btn btn-block btn-lg btn-primary">Learn More</a>
           </div>
         </div>
 
@@ -111,7 +111,7 @@
                 <i class="icon-chemistry m-auto text-primary"></i>
               </div>
               <h3>Create</h3>
-              <p class="lead mb-0">Create Fabrics</p>
+              <p class="lead mb-0">What we do</p>
             </div>
           </div>
           <div class="col-md-3">
@@ -119,8 +119,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-equalizer m-auto text-primary"></i>
               </div>
-              <h3>Manage</h3>
-              <p class="lead mb-0">Manage Fabrics</p>
+              <h3>Integrate</h3>
+              <p class="lead mb-0">In production environment</p>
             </div>
           </div>
           <div class="col-md-3">
@@ -128,8 +128,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-map m-auto text-primary"></i>
               </div>
-              <h3>Clustomize</h3>
-              <p class="lead mb-0">Metrics, alerts</p>
+              <h3>Customize</h3>
+              <p class="lead mb-0">Tailor-fit to requirements</p>
             </div>
           </div>
 
@@ -138,8 +138,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-pie-chart m-auto text-primary"></i>
               </div>
-              <h3>Visualize</h3>
-              <p class="lead mb-0">with Data Studio</p>
+              <h3>License</h3>
+              <p class="lead mb-0">By use or buyout</p>
             </div>
           </div>
         </div>
@@ -153,24 +153,23 @@
 
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/marc-olivier-jodoin-239619-unsplash.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>CREATE/MANAGE</h2>
-            <p class="lead mb-0">Create and manage services like IaaS, Paas, SaaS and apps with 'smart' Spreadsheets.</p>
-              <p class="lead mb-0">Silicon Valley IP Works backend runs on server-less cloud and depoys in your authrized MemCloud installations</p>
+            <h2>CREATE/INTEGRATE</h2>
+            <p class="lead mb-0">Create and manage components, modules or devices</p>
+
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/jupyterpreview.png');"></div>
           <div class="col-lg-6 my-auto showcase-text">
-            <h2>CUSTOMIZE<br>With iPython at <a href="https://colab.research.google.com/notebooks/welcome.ipynb" target="_blank">Google Colaboratory</a></h2>
-            <p class="lead mb-0">Ultimate flexibility and the power of iPython notebooks at your fingertip! Create, share, collaborate!</p>
+            <h2>CUSTOMIZE</h2>
                         <p class="lead mb-0">Optimize service pearameters, create custom alerts, explore internal parameters...</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/steve-johnson-612233-unsplash.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>VISUALIZE with <a href="https://marketingplatform.google.com/about/data-studio/" target="_blank">Google Data Studio</a></h2>
-            <p class="lead mb-0">Once you are ready for reports and analytics - use a custom connector to Google Data Studio for ulimate in reporting and charting felxibility!</p>
+            <h2>LICENSE</h2>
+            <p class="lead mb-0">Once you are ready for deployment</p>
           </div>
         </div>
       </div>
