--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
           <div class="col-md-3">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-pie-chart m-auto text-primary"></i>
+                <i class="icon-rocket m-auto text-primary"></i>
               </div>
               <h3>License</h3>
-              <p class="lead mb-0">By use or buyout</p>
+              <p class="lead mb-0">Per use or full buyout</p>
             </div>
           </div>
         </div>
@@ -159,14 +159,14 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/jupyterpreview.png');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/steve-johnson-612233-unsplash.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>CUSTOMIZE</h2>
                         <p class="lead mb-0">Optimize service pearameters, create custom alerts, explore internal parameters...</p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/steve-johnson-612233-unsplash.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/jupyterpreview.png');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>LICENSE</h2>
             <p class="lead mb-0">Once you are ready for deployment</p>
@@ -253,7 +253,7 @@
                 <a href="mailto: info@barnstormers.group">Contact</a>
               </li>
             </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; SVIP Works&trade;  2019. All Rights Reserved. &nbsp;&nbsp;
+            <p class="text-muted small mb-4 mb-lg-0">&copy; SVIP Works&trade;  2019. &nbsp;All Rights Reserved. &nbsp;&nbsp;
               <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@barrettward?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Barrett Ward"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Barrett Ward</span>
               </a>
               <!--
