--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="col-md-3">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-map m-auto text-primary"></i>
+                <i class="icon-wrench m-auto text-primary"></i>
               </div>
               <h3>Customize</h3>
               <p class="lead mb-0">Tailor-fit to requirements</p>
