--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <i class="icon-rocket m-auto text-primary"></i>
               </div>
               <h3>License</h3>
-              <p class="lead mb-0">Per use or full buyout</p>
+              <p class="lead mb-0">Per use or exclusively</p>
             </div>
           </div>
         </div>
